[package]
name = "poly-rpc"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
hyper = "0.14.23"

[dependencies.tokio]
version = "1.21.2"
features = ["full"]

[dev-dependencies]

[features]
default = []
