[package]
name = "poly-rpc"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
futures = "0.3"
serde = { version = "1.0.147", features = ["derive"] }

[dependencies.tokio]
version = "1.21.2"
features = ["full"]

[dependencies.poly-rt]
#version = "0.0.0"
path = "../poly-runtime"
#features = []

[dev-dependencies]

[features]
default = []
