[package]
name = "poly-rt"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
futures = "0.3"
serde = { version = "1.0.147", features = ["derive"] }

[dependencies.serde-types]
#version = "0.1.1"
path = "../serde-types"

[dependencies.hyper]
version = "0.14.23"
features = ["full"]

[dependencies.tokio]
version = "1.21.2"
features = ["full"]

[dev-dependencies]

[features]
default = []
