[package]
name = "serde-types"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Extension helper types for serde"
repository = "https://github.com/oovm/XCell"
documentation = "https://docs.rs/xcell-types"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.147", features = ["derive"] }


[dev-dependencies]
serde_json = "1.0.88"

[build-dependencies]

[features]
default = []
csharp = []
